# DLX

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  conanfile.py  makefile  requirements.txt  sudoku_input.py
.github/workflows/: release-container.yml
conan/: global.conf  remotes.json  settings.yml
conan/extensions/commands/: __init__.py  cmd_coverage.py  cmd_doc.py  cmd_execute.py  cmd_test.py
conan/extensions/plugins/: profile.py
conan/extensions/plugins/compatibility/: compatibility.py
conan/migrations/: 2.4_1-migrate.py
conan/profiles/: default
docs/: Doxyfile
docs/sphinx/: conf.py  core.rst  index.rst  reference.rst  requirements.txt  scheduler.rst  sudoku.rst  tools.rst
docs/sphinx/_static/: astro.css  code-block.css  dlx_pygments.css  remove_sigs.js
include/: dlx.h  sudoku_decoder.h  sudoku_matrix.h
include/core/: binary.h  dlx.h  dlx_binary.h  dlx_server.h  matrix.h  solution_sink.h  tcp_server.h  text.h  util.h
include/sudoku/decoder/: sudoku_decoder.h
include/sudoku/encoder/: sudoku_encoder.h
scheduler-rs/: Cargo.toml
scheduler-rs/sched-satellite-ext/: Cargo.toml
scheduler-rs/sched-satellite-ext/src/: antenna.rs  fep.rs  lib.rs
scheduler-rs/scheduler-core/: Cargo.toml
scheduler-rs/scheduler-core/src/: lib.rs
scheduler-rs/scheduler-core/src/conf/: config.rs
scheduler-rs/scheduler-core/src/db/yaml/: reader.rs
scheduler-rs/scheduler-core/src/dlx/: dlxs.rs  mod.rs
scheduler-rs/scheduler-core/src/extensions/: api.rs  loader.rs  mod.rs  root.rs
scheduler-rs/scheduler-core/src/io/: yaml.rs
scheduler-rs/scheduler-core/src/model/: context.rs  mod.rs
scheduler-rs/scheduler-core/src/model/rsrc/: mod.rs  rsrc_type.rs  static_resource.rs
scheduler-rs/scheduler-decoder/: Cargo.toml
scheduler-rs/scheduler-decoder/src/: lib.rs  main.rs
scheduler-rs/scheduler-encoder/: Cargo.toml
scheduler-rs/scheduler-encoder/src/: lib.rs  main.rs
scheduler-rs/scheduler-rest/: Cargo.toml
scheduler-rs/scheduler-rest/config/: config.yaml  resources.yaml
scheduler-rs/scheduler-rest/src/: lib.rs  main.rs
scheduler-rs/scheduler_core/: Cargo.toml
scheduler-rs/scheduler_core/src/: dlxb.rs  dlxs.rs  lib.rs  model.rs  net.rs
scheduler-rs/scheduler_decoder/: Cargo.toml
scheduler-rs/scheduler_encoder/: Cargo.toml
scheduler-rs/scheduler_server/: Cargo.toml
scheduler-rs/scheduler_server/src/: lib.rs  main.rs
scripts/: dlx-entrypoint.sh
src/: dlx.c  dlx_binary.cpp  sudoku_decoder.cpp  sudoku_decoder_main.cpp  sudoku_matrix.cpp  sudoku_matrix_main.cpp
src/core/: binary.cpp  core.cpp  dlx.c  dlx.cpp  dlx_binary.cpp  dlx_core.cpp  dlx_server.cpp  dlx_tcp_server.cpp  matrix.cpp  solution_sink.cpp  tcp_server.cpp  text.cpp
src/sudoku/decoder/: decoder.cpp  decoder_main.cpp  sudoku_decoder.cpp  sudoku_decoder_main.cpp
src/sudoku/encoder/: encoder.cpp  encoder_main.cpp  sudoku_encoder.cpp  sudoku_encoder_main.cpp
tests/: ascii_binary_utils.cpp  ascii_binary_utils.h  dlx_solution_output.txt  sudoku_solution.txt  sudoku_test2.txt  sudoku_test3.txt  sudoku_test4.txt  test.txt  test3.txt  test5.txt  test_conan_execute.py  test_dlx_binary.cpp  test_dlx_performance.cpp  test_dlx_server.cpp  test_matrix_dump.cpp  test_solution_sink.cpp  test_sudoku_decoder.cpp  test_sudoku_encoder.cpp  test_sudoku_matrix.cpp  test_sudoku_pipeline.cpp
tests/config/: performance_config.yaml
tests/generic_tests/: test2.txt  test4.txt
tests/include/: performance_test_config.h  tcp_test_utils.h
tests/src/perf/: performance_test_config.cpp  test_dlx_network_performance.cpp  test_dlx_search_performance.cpp
tests/src/unit/: ascii_binary_utils.cpp  test_dlx_binary.cpp  test_dlx_server.cpp  test_matrix_dump.cpp  test_solution_sink.cpp  test_sudoku_decoder.cpp  test_sudoku_encoder.cpp  test_sudoku_pipeline.cpp
tests/sudoku_example/: sudoku_cover.txt
tests/sudoku_tests/: sudoku_test5.txt
