[package]
name = "scheduler-rest"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
scheduler-core = { path = "../scheduler-core" }
scheduler-encoder = { path = "../scheduler-encoder" }
scheduler-decoder = { path = "../scheduler-decoder" }
